<resources>
    <!-- App name -->
    <string name="app_name">Gmail Copy</string>

    <!-- Long Texts -->
    <string name="notification_text">Tap New meeting to get a link you can send to people you want to meet with</string>

    <!-- Global -->
    <string name="google_workspace">Google Workspace</string>
    <string name="mail">Mail</string>
    <string name="meet">Meet</string>
    <string name="search_in_mail">Search in mail</string>
    <string name="gmail">Gmail</string>
    <string name="primary">Primary</string>
    <string name="promotions">Promotions</string>
    <string name="social">Social</string>
    <string name="all_labels">All labels</string>
    <string name="starred">Starred</string>
    <string name="snoozed">Snoozed</string>
    <string name="important">Important</string>
    <string name="sent">Sent</string>
    <string name="scheduled">Scheduled</string>
    <string name="outbox">Outbox</string>
    <string name="drafts">Drafts</string>
    <string name="all_mail">All mail</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>
    <string name="google_apps">Google apps</string>
    <string name="calendar">Calendar</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="others">Others</string>
    <string name="new_meeting">New meeting</string>
    <string name="join_with_a_code">Join with a code</string>
    <string name="get_a_link_you_can_share">Get a link you can share</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="general">General</string>
    <string name="compose">Compose</string>
    <string name="time">00:00</string>
    <string name="nothing_in_starred">Nothing in Starred</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose email</string>


</resources>