<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.compose.activity.ComposeActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="@dimen/_16sp"
        android:layout_marginStart="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="@+id/fromEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fromEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fromEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/subjectTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/toTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/toEditText"
        app:layout_constraintStart_toStartOf="@+id/fromTextView"
        app:layout_constraintTop_toTopOf="@+id/toEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/toEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fromEditText"
        app:layout_constraintTop_toBottomOf="@+id/fromEditText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subjectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/subjectEditText"
        app:layout_constraintStart_toStartOf="@+id/fromTextView"
        app:layout_constraintTop_toBottomOf="@+id/toEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/subjectEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintStart_toStartOf="@+id/fromEditText"
        app:layout_constraintTop_toBottomOf="@+id/toEditText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/composeEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/compose_email"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@+id/fromTextView"
        app:layout_constraintTop_toBottomOf="@+id/subjectEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/composeEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fromTextView"
        app:layout_constraintTop_toBottomOf="@+id/composeEmailTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>